# Flappy_bird_AI

./: CMakeLists.txt  README.md
includes/: bird.h  level.h  pipe.h
sources/: bird.cpp  level.cpp  main.cpp  pipe.cpp
